Fix dark on dark on mobile

--- a/gadgets/ilhpp/styles/popups_mobile.less
+++ b/gadgets/ilhpp/styles/popups_mobile.less
@@ -220,6 +220,12 @@
       p {
         margin: 0;
       }
+
+      // We are dark, always invert
+      .skin-invert {
+        color-scheme: light;
+        filter: invert(1) hue-rotate(180deg);
+      }
     }
   }
 
